--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>24kb</h1>
-<p>cybersecurity & dev</p>
+
+<center><img src="24kb.png"
+     alt="24kb"></center>
+
+<h3><center><font face="HelveticaNeue-Light" >dev & security</font></center></h3>
+<h5><center><font face="HelveticaNeue-Light" >info@24kb.it</font></center></h5>
 </body>
 </html>
